--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,19 @@
 	border-style: solid;
 	border-radius: 30px;
 }
+.cell
+{
+	width:10px;
+	height:10px;
+	background-color:#fff;
+	border-right: 1px solid #bbb;
+	border-bottom: 1px solid #bbb;
+	position:absolute;
+}
+.blackbg
+{
+	background-color:#000;
+}
 #start-game
 {
 	position:relative;
@@ -54,7 +67,7 @@
 #score
 {
 	position:relative;
-	height:80px;
+	height:120px;
 	width:300px;
 	margin-top: 30px;
 	margin-left: auto;
