--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -44,7 +44,7 @@
 }
 #background
 {
-	background: url('entire-background.jpg');
+	background: url('images/entire-background.jpg');
 }
 #end-game
 {
@@ -98,7 +98,7 @@
 	height:80px;
 	line-height: 37px;
 	font-family: Georgia;
-	background:url('background-score.jpg');
+	background:url('images/background-score.jpg');
 	border-color: gray;
 	border-width: 3px;
 	border-style: solid;
@@ -106,11 +106,11 @@
 }
 #show-score:hover
 {
-	background: url('gray.jpg');
+	background: url('images/gray.jpg');
 }
 #show-percentage:hover
 {
-	background: url('gray.jpg');
+	background: url('images/gray.jpg');
 }
 #show-percentage
 {
@@ -125,5 +125,5 @@
 	border-style: solid;
 	border-radius: 15px;
 	font-family: Georgia;
-	background:url('background-score.jpg');
+	background:url('images/background-score.jpg');
 }
